# meego-tv-IRinterface

./: AUTHORS  Makefile.am  README.md  autogen.sh  compile.sh  configure.ac  sample.map
main/: Makefile.am  ir-interface.cpp
remotes/: cocom_nec.map
scripts/: Makefile.am  ird
tests/: Makefile.am  test-pic.cpp
